[package]
name = "hnswx"
version = "0.2.0"
edition = "2024"
authors = ["happyboy <superhappyboy1995@gmail.com>"]
description = "A Rust implementation of the Hierarchical Navigable Small World (HNSW) algorithm. HNSW is an efficient approximate nearest neighbor search algorithm, particularly suitable for high-dimensional vector retrieval."
keywords = ["hnsw"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/0xhappyboy/hnswx"

[dependencies]
bit-vec = "0.6"
hashbrown = "0.14"
rand = "0.8"
ordered-float = "3.7"
parking_lot = "0.12"
rayon = "1.7"
smallvec = "1.11" 
crossbeam = "0.8.4"

[dev-dependencies]
rand = "0.8"
